Sat Nov 27 15:43:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: link addr2line only for ELF.

Sat Nov 27 13:58:55 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/optparse.rb (OptionParser#candidate): : was missing.  Thanks,
	  Shota Fukumori.  [ruby-dev:42634]

Sat Nov 27 12:07:05 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* man/ruby.1: Ruby man page from Arthur Gunn in [ruby-core:33412]

Sat Nov 27 11:29:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#candidate): get rid of 1.9 syntax
	  so that BASERUBY can be 1.8.

Sat Nov 27 08:16:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): should close fd on
	  edge case.

Fri Nov 26 13:33:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: apply a patch from shinichiro.h.

Fri Nov 26 12:21:20 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: added to show source filename and line number of
	  functions in backtrace. [ruby-dev:42625]
	  a patch from shinichiro.h <shinichiro.hamaji AT gmail.com>

	* addr2line.h: ditto.

	* common.mk: add addr2line.$(OBJEXT).

	* configure.in: check dl_iterate_phdr.

	* vm_dump.c (rb_vm_bugreport): use rb_dump_backtrace_with_lines in
	  addr2line.c when the binary is ELF.

Fri Nov 26 12:12:50 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (setup_tree): restart setup_tree() for a node whose
	  AnchorNode's type is ANCHOR_PREC_BEHIND or ANCHOR_PREC_BEHIND_NOT
	  and divide_look_behind_alternatives() divided it to NT_ALT or
	  NT_LIST. [ruby-core:33370]

Fri Nov 26 11:40:11 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm_dump.c (dump_thread): get only required rights of the target
	  thread because THREAD_ALL_ACCESS causes an access error on XP.
	  reported by Masaya TARUI via IRC.

Fri Nov 26 11:09:07 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm_dump.c (dump_thread): show the displacement from the beginning
	  of the symbol.
